home body menor a 769

--- a/Front/src/App.module.css
+++ b/Front/src/App.module.css
@@ -17,6 +17,7 @@
     .body {
         background-color: aqua;
         display: flex;
-        height: 75%;
+        flex-direction: column;
+        height: 78%;
     }
 }
