--- a/Front/src/Components/SideBar/SideBar.module.css
+++ b/Front/src/Components/SideBar/SideBar.module.css
@@ -9,6 +9,6 @@
 @media (max-width: 768px) {
     .sideBarContainer {
         background-color: pink;
-        width: 30%;
+        height: 15%;
     }
 }
