arquitectura para todos los tamaños

--- a/Front/src/Components/Card/Card.module.css
+++ b/Front/src/Components/Card/Card.module.css
@@ -1,10 +1,52 @@
-/* @media (min-width: 1025px) {
+@media (min-width: 1025px) {
+    .cardContainer {
+        background-color: yellowgreen;
+        display: flex;
+        flex-direction: column;
+        width: 70vw;
+        height: 70vw;
+    }
 
+    .image {
+        background-color: brown;
+        height: 70%;
+    }
+
+    .price {
+        background-color: beige;
+        height: 10%;
+    }
+
+    .description {
+        background-color: aquamarine;
+        height: 20%;
+    }
 }
   
 @media (min-width: 769px) and (max-width: 1024px) {
+    .cardContainer {
+        background-color: yellowgreen;
+        display: flex;
+        flex-direction: column;
+        width: 70vw;
+        height: 70vw;
+    }
 
-} */
+    .image {
+        background-color: brown;
+        height: 70%;
+    }
+
+    .price {
+        background-color: beige;
+        height: 10%;
+    }
+
+    .description {
+        background-color: aquamarine;
+        height: 20%;
+    }
+} 
 
 @media (max-width: 768px) {
     .cardContainer {
