--- a/Front/src/Components/Footer/Footer.module.css
+++ b/Front/src/Components/Footer/Footer.module.css
@@ -1,10 +1,16 @@
-/* @media (min-width: 1025px) {
-
+@media (min-width: 1025px) {
+    .footerContainer {
+        background-color: yellowgreen;
+        height: 10%;
+    }
 }
   
 @media (min-width: 769px) and (max-width: 1024px) {
-
-} */
+    .footerContainer {
+        background-color: yellowgreen;
+        height: 10%;
+    }
+} 
 
 @media (max-width: 768px) {
     .footerContainer {
