--- a/Front/src/Components/Home/Home.module.css
+++ b/Front/src/Components/Home/Home.module.css
@@ -1,10 +1,29 @@
-/* @media (min-width: 1025px) {
-
+@media (min-width: 1025px) {
+    .homeContainer {
+        background-color: silver;
+        width: 80%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        row-gap: 5vh;
+        padding: 3vh 0;
+        overflow: auto;
+    }
 }
   
+   
 @media (min-width: 769px) and (max-width: 1024px) {
-
-} */
+    .homeContainer {
+        background-color: silver;
+        height: 85%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        row-gap: 5vh;
+        padding: 3vh 0;
+        overflow: auto;
+    }
+}
 
 @media (max-width: 768px) {
     .homeContainer {
