--- a/Front/src/Components/NavBar/Navbar.module.css
+++ b/Front/src/Components/NavBar/Navbar.module.css
@@ -1,10 +1,16 @@
-/* @media (min-width: 1025px) {
-
+@media (min-width: 1025px) {
+    .navBarContainer {
+        background-color: red;
+        height: 12%;
+    }
 }
   
 @media (min-width: 769px) and (max-width: 1024px) {
-
-} */
+    .navBarContainer {
+        background-color: red;
+        height: 12%;
+    }
+} 
 
 @media (max-width: 768px) {
     .navBarContainer {
