--- a/Front/src/Components/Footer/Footer.module.css
+++ b/Front/src/Components/Footer/Footer.module.css
@@ -16,5 +16,9 @@
     .footerContainer {
         background-color: yellowgreen;
         height: 10%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0 5%;
     }
 }
