--- a/Front/src/Components/Card/Card.module.css
+++ b/Front/src/Components/Card/Card.module.css
@@ -7,9 +7,15 @@
         height: 70vw; */
     }
 
-    .image {
+    .imageContainer {
         background-color: brown;
         height: 70%;
+    }
+
+    .image {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
     }
 
     .price {
@@ -28,13 +34,19 @@
         background-color: yellowgreen;
         display: flex;
         flex-direction: column;
-        width: 70vw;
-        height: 70vw;
+        width: 100%;
+        height: 100%;
+    }
+
+    .imageContainer {
+        background-color: brown;
+        height: 70%;
     }
 
     .image {
-        background-color: brown;
-        height: 70%;
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
     }
 
     .price {
@@ -53,13 +65,19 @@
         background-color: yellowgreen;
         display: flex;
         flex-direction: column;
-        width: 70vw;
-        height: 70vw;
+        width: 100%;
+        height: 100%;
+    }
+
+    .imageContainer {
+        background-color: brown;
+        height: 70%;
     }
 
     .image {
-        background-color: brown;
-        height: 70%;
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
     }
 
     .price {
