--- a/Front/src/Components/Home/Home.module.css
+++ b/Front/src/Components/Home/Home.module.css
@@ -8,6 +8,10 @@
         padding: 3vh;
         overflow: auto;
     }
+
+    .cardContainerInHome {
+        height: 100%;
+    }
 }
   
    
@@ -15,12 +19,16 @@
     .homeContainer {
         background-color: silver;
         height: 90%;
-        display: flex;
-        flex-direction: column;
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
         align-items: center;
-        row-gap: 5vh;
-        padding: 3vh 0;
+        gap: 5vh;
+        padding: 3vh;
         overflow: auto;
+    }
+
+    .cardContainerInHome {
+        height: 100%;
     }
 }
 
@@ -34,5 +42,10 @@
         row-gap: 5vh;
         padding: 3vh 0;
         overflow: auto;
+    }
+
+    .cardContainerInHome {
+        width: 60%;
+        height: 60%;
     }
 }
