preview para carga de item

--- a/Front/src/Components/Card/Card.module.css
+++ b/Front/src/Components/Card/Card.module.css
@@ -72,12 +72,25 @@
     .imageContainer {
         background-color: brown;
         height: 70%;
+        position: relative;
+    }
+
+    .editButton {
+        position: absolute;
+        left: 0;
+        top: 0;
     }
 
     .image {
         width: 100%;
         height: 100%;
         object-fit: contain;
+    }
+
+    .deleteButton {
+        position: absolute;
+        right: 0;
+        top: 0;
     }
 
     .price {
