--- a/Front/src/Components/MainPage/MainPage.module.css
+++ b/Front/src/Components/MainPage/MainPage.module.css
@@ -38,7 +38,7 @@
     }
     
     .body {
-        background-color: aqua;
+        /* background-color: aqua; */
         display: flex;
         flex-direction: column;
         height: 78%;
