estilos condicionales filtro publico

--- a/Front/src/Components/SideBar/SmallSideBar.module.css
+++ b/Front/src/Components/SideBar/SmallSideBar.module.css
@@ -8,7 +8,7 @@
     }
 
     .iconContainer {
-        background-color: #17dd94;
+        background-color: #adadad;
         height: 70%;
         border-radius: 50%;
         aspect-ratio: 1/1;
@@ -34,7 +34,7 @@
     }
 
     .iconContainer {
-        background-color: #17dd94;
+        background-color: #adadad;
         height: 80%;
         margin-bottom: 10px;
         border-radius: 50%;
