--- a/Front/src/Components/SideBar/DropDownMenu.module.css
+++ b/Front/src/Components/SideBar/DropDownMenu.module.css
@@ -1,6 +1,8 @@
 .dropDownContainer {
-    color: white;
     background-color: #62929E;
+    color: white;
+    width: 35%;
+    max-width: 180px;
     position: absolute;
     display: flex;
     flex-direction: column;
@@ -18,4 +20,5 @@
     width: 100%;
     border: 1px solid white;
     margin: 5px 0;
+    
 }
