--- a/Front/src/Components/Card/Card.module.css
+++ b/Front/src/Components/Card/Card.module.css
@@ -62,15 +62,16 @@
 
 @media (max-width: 768px) {
     .cardContainer {
-        background-color: yellowgreen;
+        /* background-color: yellowgreen; */
         display: flex;
         flex-direction: column;
+        justify-content: space-around;
         width: 100%;
         height: 100%;
     }
 
     .imageContainer {
-        background-color: brown;
+        /* background-color: brown; */
         height: 70%;
         position: relative;
     }
@@ -93,13 +94,18 @@
         top: 0;
     }
 
-    .price {
-        background-color: beige;
+    .description, .type {
+        background-color: #ffeed5;
         height: 10%;
+        text-align: center;
+        border-radius: 10px;
+        /* margin-bottom: 10px; */
     }
 
-    .description, .type {
-        background-color: aquamarine;
-        height: 20%;
+    .price {
+        background-color: #ffeed5;
+        height: 10%;
+        text-align: center;
+        border-radius: 10px;
     }
 }
