--- a/Front/src/Components/NavBar/Navbar.module.css
+++ b/Front/src/Components/NavBar/Navbar.module.css
@@ -1,6 +1,6 @@
-.navBarContainer {
+/* .navBarContainer {
     background-color: #6d82cb
-}
+} */
 
 @media (min-width: 1025px) {
     .navBarContainer {
