--- a/Front/src/Components/SideBar/SmallSideBar.module.css
+++ b/Front/src/Components/SideBar/SmallSideBar.module.css
@@ -26,7 +26,7 @@
 
 @media (max-width: 768px) {
     .sideBarContainer {
-        background-color: #6d82cb;
+        /* background-color: #6d82cb; */
         height: 10%;
         display: flex;
         justify-content: space-around;
