fix de estilo de body en admin

--- a/Front/src/Components/Admin/Admin.module.css
+++ b/Front/src/Components/Admin/Admin.module.css
@@ -5,6 +5,13 @@
         height: 100%;
         top: 0;
     }
+
+    .body {
+        /* background-color: aqua; */
+        display: flex;
+        flex-direction: column;
+        height: 88%;
+    }
     
     .addButton {
         position: absolute;
