Background de nav en admin

--- a/Front/src/Components/Admin/Admin.module.css
+++ b/Front/src/Components/Admin/Admin.module.css
@@ -6,44 +6,24 @@
         top: 0;
     }
 
+    .headerBackground {
+        /* background-color: red; */
+        background-image: url('../../assets//Pista_Tenis.JPG');
+        width: 100%;
+        height: 20%;
+        position: absolute;
+        color: transparent;
+        z-index: -1;
+        background-size: 100% auto; /* Escala la imagen para ajustarse al ancho del contenedor */
+        background-repeat: no-repeat;
+        background-position: center;
+        opacity: 0.8;
+    }
+
     .body {
         /* background-color: aqua; */
         display: flex;
         flex-direction: column;
         height: 88%;
-    }
-    
-    .uploadContainer {
-        background-color: #9a349a;
-        width: 35px;
-        height: 35px;
-        position: absolute;
-        left: 2.5vh;
-        margin-top: 2vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        border-radius: 50%;
-        border: 2px solid white;
-    }
-
-    .toolContainer {
-        background-color: #9a349a;
-        width: 40px;
-        height: 40px;
-        position: absolute;
-        right: 2.5vh;
-        margin-top: 2vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        border-radius: 50%;
-        border: 2px solid white;
-    }
-
-    .icon {
-        color: white;
-        width:70%;
-        height: 70%;
     }
 }
