--- a/Front/src/Components/Home/Home.module.css
+++ b/Front/src/Components/Home/Home.module.css
@@ -39,9 +39,41 @@
         flex-wrap: wrap;
         justify-content: center;
         gap: 5vh;
-        padding: 4vh 11vh;
+        padding: 3vh 11vh 4vh;
         overflow: auto;
         border-top: 2px solid white;
+    }
+
+    .uploadContainer {
+        background-color: #9a349a;
+        width: 35px;
+        height: 35px;
+        position: absolute;
+        left: 2.5vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 50%;
+        border: 2px solid white;
+    }
+
+    .toolContainer {
+        background-color: #9a349a;
+        width: 40px;
+        height: 40px;
+        position: absolute;
+        right: 2.5vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 50%;
+        border: 2px solid white;
+    }
+
+    .icon {
+        color: white;
+        width:70%;
+        height: 70%;
     }
 
     .cardContainerInHome {
