--- a/Front/src/Components/Admin/AddItem/AddItem.module.css
+++ b/Front/src/Components/Admin/AddItem/AddItem.module.css
@@ -4,5 +4,63 @@
         width: 100%;
         height: 100%;
         top: 0;
+        color: white;
     }
+
+    .addItemOuter {
+        /* background-color: silver; */
+        width: 90%;
+        height: 88%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: auto;
+    }
+    
+    .addItemInner {
+        background-color: rgba(192, 192, 192, 0.34);
+        width: 90%;
+        border: 2px solid white;
+        padding: 10% 5%;
+        border-radius: 10px;
+    }
+
+    .dataSection {
+        display: flex;
+        justify-content: space-between;
+    }
+
+
+    .select {
+        width: 7em;
+        height: 40px;
+        border: none;
+        border-radius: 10px;
+    }
+
+    .input {
+        background-color: transparent;
+        width: 10em;
+        height: 40px;
+        border: none;
+        box-sizing: border-box;
+        border-bottom: 1px solid white;
+    }
+
+    .selectImageContainer {
+        /* border: 1px solid lightgray; */
+        cursor: pointer;
+        
+        /* marginTop: "10px",
+              border: "1px solid lightgray",
+              padding: "10px",
+              borderRadius: "5px",
+              cursor: "pointer",
+              display: "flex",
+              alignItems: "center", */
+    }
+
+    /* .input:focus {
+        border: red;
+    } */
 }
