--- a/Front/src/Components/Admin/AddItem/AddItem.module.css
+++ b/Front/src/Components/Admin/AddItem/AddItem.module.css
@@ -1,5 +1,21 @@
+input[type=file]::file-selector-button {
+    margin-right: 20px;
+    border: none;
+    background: #9a349a;
+    padding: 10px 10px;
+    border-radius: 10px;
+    color: #fff;
+    cursor: pointer;
+    transition: background .2s ease-in-out;
+  }
+  
+  input[type=file]::file-selector-button:hover {
+    background: #790679;
+  }
+
 @media (max-width: 768px) {
     .addItemContainer {
+        display: flex;
         position: absolute;
         width: 100%;
         height: 100%;
@@ -20,8 +36,11 @@
     .addItemInner {
         background-color: rgba(192, 192, 192, 0.34);
         width: 90%;
+        display: flex;
+        flex-direction: column;
+        row-gap: 1.3em;
         border: 2px solid white;
-        padding: 10% 5%;
+        padding: 4% 5%;
         border-radius: 10px;
     }
 
@@ -32,34 +51,60 @@
 
 
     .select {
-        width: 7em;
-        height: 40px;
+        background-color: #dadada;
+        width: 8em;
+        height: 37px;
         border: none;
         border-radius: 10px;
     }
 
     .input {
         background-color: transparent;
-        width: 10em;
-        height: 40px;
+        color: white;
+        width: 8em;
+        height: 37px;
         border: none;
         box-sizing: border-box;
+        font-size: 1.1em;
+        text-align: center;
         border-bottom: 1px solid white;
     }
 
     .selectImageContainer {
-        /* border: 1px solid lightgray; */
         cursor: pointer;
-        
-        /* marginTop: "10px",
-              border: "1px solid lightgray",
-              padding: "10px",
-              borderRadius: "5px",
-              cursor: "pointer",
-              display: "flex",
-              alignItems: "center", */
     }
 
+    .cardContainerInAdd {
+        width: 37vh;
+        height: 32vh;
+        background-color: rgb(181 181 181 / 61%);
+        color: black;
+        border: 2px solid white;
+        border-radius: 15px;
+        padding: 10px;
+        margin: auto;
+        box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    }
+
+    .buttonSection {
+        display: flex;
+        justify-content: space-evenly;
+        /* margin-top: 10%; */
+    }
+
+    .button {
+        background-color: #9a349a;
+        color: white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        column-gap: 8%;
+        border: 1px solid silver;
+        width: 30%;
+        height: 2.5em;
+        font-weight: bold;
+        border-radius: 10px;
+    }
     /* .input:focus {
         border: red;
     } */
