--- a/Front/src/Components/Card/EditableCard/EditableCard.module.css
+++ b/Front/src/Components/Card/EditableCard/EditableCard.module.css
@@ -62,23 +62,33 @@
 
 @media (max-width: 768px) {
     .cardContainer {
-        background-color: yellowgreen;
+        /* background-color: yellowgreen; */
         display: flex;
         flex-direction: column;
+        justify-content: space-around;
         width: 100%;
         height: 100%;
     }
 
     .imageContainer {
-        background-color: brown;
+        /* background-color: brown; */
         height: 70%;
         position: relative;
     }
 
-    .editButton {
+    .editContainer {
+        background-color: #90d0f7;
+        color: black;
+        width: 30px;
+        height: 30px;
+        border-radius: 50%;
         position: absolute;
         left: 0;
         top: 0;
+        display: flex;
+        justify-content: center;
+        border: 1px solid black;
+        align-items: center;
     }
 
     .image {
@@ -87,19 +97,33 @@
         object-fit: contain;
     }
 
-    .deleteButton {
+    .deleteContainer {
+        background-color: #ff7777;
+        color: black;
+        width: 30px;
+        height: 30px;
+        border-radius: 50%;
         position: absolute;
         right: 0;
         top: 0;
+        display: flex;
+        justify-content: center;
+        border: 1px solid black;
+        align-items: center;
+    }
+
+    .description, .type {
+        background-color: #ffeed5;
+        height: 10%;
+        text-align: center;
+        border-radius: 10px;
+        /* margin-bottom: 10px; */
     }
 
     .price {
-        background-color: beige;
+        background-color: #ffeed5;
         height: 10%;
-    }
-
-    .description {
-        background-color: aquamarine;
-        height: 20%;
+        text-align: center;
+        border-radius: 10px;
     }
 }
