--- a/Front/src/Components/Card/Card.module.css
+++ b/Front/src/Components/Card/Card.module.css
@@ -30,7 +30,7 @@
 }
   
 @media (min-width: 769px) and (max-width: 1024px) {
-    .cardContainer {
+    /* .cardContainer {
         background-color: yellowgreen;
         display: flex;
         flex-direction: column;
@@ -57,6 +57,72 @@
     .description, .type {
         background-color: aquamarine;
         height: 20%;
+    } */
+
+    .cardContainer {
+        /* background-color: yellowgreen; */
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        width: 100%;
+        height: 100%;
+    }
+
+    .imageContainer {
+        /* background-color: brown; */
+        height: 70%;
+        position: relative;
+    }
+
+    .editContainer {
+        background-color: #90d0f7;
+        color: black;
+        width: 30px;
+        height: 30px;
+        border-radius: 50%;
+        position: absolute;
+        left: 0;
+        top: 0;
+        display: flex;
+        justify-content: center;
+        border: 1px solid black;
+        align-items: center;
+    }
+
+    .image {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+    }
+
+    .deleteContainer {
+        background-color: #ff7777;
+        color: black;
+        width: 30px;
+        height: 30px;
+        border-radius: 50%;
+        position: absolute;
+        right: 0;
+        top: 0;
+        display: flex;
+        justify-content: center;
+        border: 1px solid black;
+        align-items: center;
+    }
+
+    .description, .type {
+        background-color: #ffeed5;
+        height: 10%;
+        text-align: center;
+        border-radius: 10px;
+        /* margin-bottom: 10px; */
+    }
+
+    .price {
+        background-color: #ffeed5;
+        height: 10%;
+        text-align: center;
+        border-radius: 10px;
     }
 } 
 
