--- a/Front/src/Components/Home/Home.module.css
+++ b/Front/src/Components/Home/Home.module.css
@@ -17,18 +17,56 @@
    
 @media (min-width: 769px) and (max-width: 1024px) {
     .homeContainer {
-        background-color: silver;
         height: 90%;
-        display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-        align-items: center;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
         gap: 5vh;
-        padding: 3vh;
+        padding: 3vh 11vh 4vh;
         overflow: auto;
+        border-top: 2px solid white;
+    }
+
+    .uploadContainer {
+        background-color: #9a349a;
+        width: 35px;
+        height: 35px;
+        position: absolute;
+        left: 2.5vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 50%;
+        border: 2px solid white;
+    }
+
+    .toolContainer {
+        background-color: #9a349a;
+        width: 40px;
+        height: 40px;
+        position: absolute;
+        right: 2.5vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 50%;
+        border: 2px solid white;
+    }
+
+    .icon {
+        color: white;
+        width:70%;
+        height: 70%;
     }
 
     .cardContainerInHome {
-        height: 100%;
+        width: 37vh;
+        height: 32vh;
+        background-color: rgb(181 181 181 / 61%);
+        border: 2px solid white;
+        border-radius: 15px;
+        padding: 10px;
+        box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
     }
 }
 
