--- a/Front/src/Components/SideBar/SmallSideBar.module.css
+++ b/Front/src/Components/SideBar/SmallSideBar.module.css
@@ -1,6 +1,6 @@
 @media (min-width: 769px) and (max-width: 1024px) {
     .sideBarContainer {
-        background-color: pink;
+        /* background-color: #6d82cb; */
         height: 10%;
         display: flex;
         justify-content: space-around;
@@ -9,7 +9,8 @@
 
     .iconContainer {
         background-color: #adadad;
-        height: 70%;
+        height: 80%;
+        margin-bottom: 10px;
         border-radius: 50%;
         aspect-ratio: 1/1;
         display: flex;
