--- a/Front/src/index.css
+++ b/Front/src/index.css
@@ -7,6 +7,9 @@
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
   background-image: url('./assets/FootballTexture.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 100%;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
