Home tamaño grande sin terminar

--- a/Front/src/Components/MainPage/MainPage.module.css
+++ b/Front/src/Components/MainPage/MainPage.module.css
@@ -7,7 +7,7 @@
     }
     
     .body {
-        background-color: aqua;
+        /* background-color: aqua; */
         display: flex;
         height: 78%;
     }
