--- a/Front/src/Components/Home/Home.module.css
+++ b/Front/src/Components/Home/Home.module.css
@@ -1,16 +1,71 @@
 @media (min-width: 1025px) {
-    .homeContainer {
-        background-color: silver;
-        width: 85%;
+    /* .homeContainer {
+        width: 80%;
         display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); /* Columnas de al menos 200px de ancho y máximo 1fr */
-        gap: 3vh 2.5vh; /* Espacio entre elementos */
+        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+        gap: 3vh 2.5vh;
         padding: 3vh;
+        border-top: 2px solid white;
+        border-left: 2px solid white;
         overflow: auto;
     }
 
     .cardContainerInHome {
         height: 100%;
+    } */
+
+    .homeContainer {
+        width: 80%;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        gap: 5vh;
+        padding: 3vh 11vh 4vh;
+        overflow: auto;
+        border-top: 2px solid white;
+        border-left: 2px solid white;
+    }
+
+    .uploadContainer {
+        background-color: #9a349a;
+        width: 35px;
+        height: 35px;
+        position: absolute;
+        left: 2.5vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 50%;
+        border: 2px solid white;
+    }
+
+    .toolContainer {
+        background-color: #9a349a;
+        width: 40px;
+        height: 40px;
+        position: absolute;
+        right: 2.5vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 50%;
+        border: 2px solid white;
+    }
+
+    .icon {
+        color: white;
+        width:70%;
+        height: 70%;
+    }
+
+    .cardContainerInHome {
+        width: 32vh;
+        height: 28vh;
+        background-color: rgb(181 181 181 / 61%);
+        border: 2px solid white;
+        border-radius: 15px;
+        padding: 10px;
+        box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
     }
 }
   
