--- a/Front/src/Components/SideBar/LargeSideBar.module.css
+++ b/Front/src/Components/SideBar/LargeSideBar.module.css
@@ -1,11 +1,14 @@
 @media (min-width: 1025px) {
     .sideBarContainer {
-        background-color: pink;
-        width: 15%;
+        background-image: url('../../assets/Cancha_Basket.jpg');
+        background-size: cover;
+        background-position: center;
+        /* background-color: pink; */
+        width: 20%;
     }
 }
   
-@media (min-width: 769px) and (max-width: 1024px) {
+/* @media (min-width: 769px) and (max-width: 1024px) {
     .sideBarContainer {
         background-color: pink;
         height: 10%;
@@ -54,4 +57,4 @@
         width: 70%;
         height: 70%;
     }
-}
+} */
