--- a/Front/src/Components/Admin/Admin.module.css
+++ b/Front/src/Components/Admin/Admin.module.css
@@ -1,3 +1,32 @@
+@media (min-width: 1025px) {
+    .adminContainer {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+    }
+
+    .headerBackground {
+        /* background-color: red; */
+        background-image: url('../../assets//Pista_Tenis.JPG');
+        width: 100%;
+        height: 20%;
+        position: absolute;
+        color: transparent;
+        z-index: -1;
+        background-size: 100% auto; /* Escala la imagen para ajustarse al ancho del contenedor */
+        background-repeat: no-repeat;
+        background-position: center;
+        opacity: 0.8;
+    }
+
+    .body {
+        /* background-color: aqua; */
+        display: flex;
+        height: 86%;
+    }
+}
+
 @media (min-width: 769px) and (max-width: 1024px) {
     .adminContainer {
         position: absolute;
