--- a/Front/src/Components/NavBar/Navbar.module.css
+++ b/Front/src/Components/NavBar/Navbar.module.css
@@ -3,7 +3,7 @@
 } */
 
 @media (min-width: 1025px) {
-    .navBarContainer {
+    /* .navBarContainer {
         background-image: url('../../assets/Pista_Tenis.JPG');
         background-size: cover;
         background-position: center;
@@ -27,6 +27,50 @@
     .button {
         background-color: #17dd94;
         width: 10vh;
+    } */
+    .navBarContainer {
+        background-image: url('../../assets/Pista_Tenis.JPG');
+        background-size: cover;
+        background-position: center;
+        height: 14%;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+    }
+
+    .leftSection, .rightSection {
+        width: 20%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .middleSection {
+        width: 60%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .img {
+        height: 85%;
+    }
+
+    .title {
+        font-style: italic;
+        font-weight: bold;
+        font-size: 3.2em;
+        color: white;
+    }
+
+    .button {
+        background-color: rgb(243,125,83);
+        color: white;
+        padding: 1vh;
+        border-radius: 10px;
+        border: 1px solid white;
     }
 }
   
