--- a/Front/src/Components/Card/Card.module.css
+++ b/Front/src/Components/Card/Card.module.css
@@ -1,31 +1,4 @@
 @media (min-width: 1025px) {
-    /* .cardContainer {
-        background-color: yellowgreen;
-        display: flex;
-        flex-direction: column;
-    }
-
-    .imageContainer {
-        background-color: brown;
-        height: 70%;
-    }
-
-    .image {
-        width: 100%;
-        height: 100%;
-        object-fit: contain;
-    }
-
-    .price {
-        background-color: beige;
-        height: 10%;
-    }
-
-    .description, .type {
-        background-color: aquamarine;
-        height: 20%;
-    } */
-
     .cardContainer {
         /* background-color: yellowgreen; */
         display: flex;
@@ -82,6 +55,7 @@
         height: 10%;
         text-align: center;
         border-radius: 10px;
+        font-size: 95%;
         /* margin-bottom: 10px; */
     }
 
@@ -90,6 +64,7 @@
         height: 10%;
         text-align: center;
         border-radius: 10px;
+        font-size: 95%;
     }
 }
   
