--- a/Front/src/Components/SideBar/LargeSideBar.module.css
+++ b/Front/src/Components/SideBar/LargeSideBar.module.css
@@ -3,26 +3,27 @@
         background-image: url('../../assets/Cancha_Basket.jpg');
         background-size: cover;
         background-position: center;
-        /* background-color: pink; */
         width: 20%;
         display: flex;
         flex-direction: column;
-        justify-content: center;
-        row-gap: 9%;
+        justify-content: space-evenly;
         box-sizing: border-box;
     }
 
     .filterSection {
+        background-color: rgba(250,250,250,0.8);
         display: flex;
         flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        font-size: 1.3em;
+        width: 65%;
+        margin: 0 auto;
+        padding: 3%;
+        border-radius: 10px;
+        border: 1px solid black;
+        font-size: 1.1em;
     }
 
     .filterContainer {
         background-color: rgba(250,250,250,0.8);
-        padding: 5% 10%;
         border-radius: 10px;
         border: 1px solid black;
     }
@@ -31,12 +32,12 @@
         background-color: rgba(250,250,250,0.8);
         display: flex;
         flex-direction: column;
-        width: 60%;
+        width: 65%;
         margin: 0 auto;
-        padding: 6%;
+        padding: 3.5% 3%;
         border-radius: 10px;
         border: 1px solid black;
-        font-size: 1.3em;
+        font-size: 1.1em;
     }
 
     .tools {
@@ -45,7 +46,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: center;
+        justify-content: space-evenly;
         row-gap: 10%;
     }
 
@@ -63,29 +64,4 @@
         font-weight: bold;
         border-radius: 10px;
     }
-
-
-    /* .uploadContainer {
-        background-color: #9a349a;
-        width: 40px;
-        height: 40px;
-        left: 2.5vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        border: 2px solid white;
-    }
-
-    .toolContainer {
-        background-color: #9a349a;
-        width: 40px;
-        height: 40px;
-        right: 2.5vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        border: 2px solid white;
-    } */
-
-    
 }
