--- a/Front/src/Components/Admin/AdminTools/AdminTools.module.css
+++ b/Front/src/Components/Admin/AdminTools/AdminTools.module.css
@@ -1,3 +1,104 @@
+@media (min-width: 1025px) {
+    .adminToolsContainer {
+        display: flex;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        color: white;
+    }
+
+    .adminToolsOuter {
+        /* background-color: silver; */
+        width: 90%;
+        height: 88%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: auto;
+    }
+    
+    .adminToolsInner {
+        background-color: rgba(192, 192, 192, 0.34);
+        width: 90%;
+        max-width: 500px;
+        display: flex;
+        flex-direction: column;
+        row-gap: 2.2em;
+        border: 2px solid white;
+        padding: 4% 5%;
+        border-radius: 10px;
+    }
+
+    .iconContainer{
+        /* background-color: red; */
+        color: silver;
+        width: 65px;
+        aspect-ratio: 1/1;
+    }
+
+    .title {
+        text-align: center;
+        margin: 0;
+        font-size: 1.9em;
+    }
+
+    .icon {
+        width: 100%;
+        height: 100%;
+    }
+
+    .selectSection {
+        font-size: 1.2em;
+    }
+
+    .input {
+        background-color: transparent;
+        color: white;
+        width: 6em;
+        height: 25px;
+        border: none;
+        box-sizing: border-box;
+        font-size: 1.1em;
+        text-align: center;
+        border-bottom: 1px solid white;
+        margin-left: 20%;
+    }
+
+    .input::placeholder {
+        color: white;
+        text-align: end;
+    }
+
+    .upDownSection {
+        display: flex;
+        justify-content: space-evenly;
+    }
+
+    .buttonSection {
+        display: flex;
+        justify-content: space-evenly;
+        /* margin-top: 10%; */
+    }
+
+    .button {
+        background-color: #9a349a;
+        color: white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        column-gap: 8%;
+        border: 1px solid silver;
+        width: 30%;
+        height: 2.5em;
+        font-weight: bold;
+        border-radius: 10px;
+    }
+    /* .input:focus {
+        border: red;
+    } */
+}
+
 @media (min-width: 769px) and (max-width: 1024px) {
     .adminToolsContainer {
         display: flex;
