--- a/Front/src/Components/Login/Login.module.css
+++ b/Front/src/Components/Login/Login.module.css
@@ -1,3 +1,92 @@
+@media (min-width: 1025px) {
+    .loginContainer {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+    }
+
+    .backgroundContainer {
+        background-image: url('../../assets/Logo.png');
+        background-repeat: no-repeat;
+        background-position: center;
+        opacity: 0.5;
+        width: 100%;
+        height: 100%
+    }
+
+    .opaqueContainer {
+        background-color: rgb(114 114 114 / 40%);
+        color: white;
+        width: 85%;
+        max-width: 500px;
+        height: 75%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        border: 2px solid white;
+        border-radius: 30px;
+        row-gap: 7%;
+    }
+
+    .input {
+        /* background-color:#d6d6d6; */
+        background-color: transparent;
+        color: white;
+        width: 70%;
+        height: 6%;
+        font-size: 1.1em;
+        border: none;
+        border-bottom: 1px solid white;
+        text-align: center;
+    }
+
+    .input::placeholder {
+        color: white;
+        font-size: 0.9em;
+        text-align: center;
+        font-style: italic;
+    }
+
+    .eyeContainer {
+        background-color: #9a349a;
+        width: 32px;
+        height: 32px;
+        display: flex;
+        justify-content: center;
+        align-items: center;        
+        border-radius: 50%;
+    }
+
+    .eyeIcon {
+        color: white;
+        width: 75%;
+        height: 75%;
+    }
+
+    .button {
+        background-color: #9a349a;
+        color: white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        column-gap: 8%;
+        border: 1px solid silver;
+        width: 30%;
+        height: 9%;
+        font-weight: bold;
+        border-radius: 10px;
+    }
+
+    .icon {
+        scale: 1.3;
+    }
+}
+
 @media (min-width: 769px) and (max-width: 1024px) {
     .loginContainer {
         display: flex;
