--- a/Front/src/Components/SideBar/LargeSideBar.module.css
+++ b/Front/src/Components/SideBar/LargeSideBar.module.css
@@ -58,9 +58,11 @@
         justify-content: center;
         column-gap: 8%;
         border: 1px solid silver;
-        width: 42%;
-        height: 32%;
-        font-size: 0.85em;
+        width: 55%;
+        max-width: 130px;
+        height: 34%;
+        /* font-size: 0.85em; */
+        font-size: min(1.4vw, 0.9em);
         font-weight: bold;
         border-radius: 10px;
     }
