--- a/Front/src/Components/Admin/AddItem/AddItem.module.css
+++ b/Front/src/Components/Admin/AddItem/AddItem.module.css
@@ -60,6 +60,10 @@ input[type=file]::file-selector-button:hover {
         border-radius: 10px;
     }
 
+    .select:hover {
+        cursor: pointer;
+    }
+
     .input {
         background-color: transparent;
         color: white;
@@ -110,6 +114,10 @@ input[type=file]::file-selector-button:hover {
     /* .input:focus {
         border: red;
     } */
+
+    .button:hover {
+        cursor: pointer;
+    }
 }
 
 @media (min-width: 769px) and (max-width: 1024px) {
