--- a/Front/src/Components/Filter/PriceFilter.module.css
+++ b/Front/src/Components/Filter/PriceFilter.module.css
@@ -27,6 +27,10 @@
         border-radius: 8px;
         border: 1px solid black;
     }
+
+    .button:hover {
+        cursor: pointer;
+    }
 }
 
 @media (max-width: 1024px) {
