--- a/Front/src/Components/Admin/AddItem/AddItem.module.css
+++ b/Front/src/Components/Admin/AddItem/AddItem.module.css
@@ -22,6 +22,7 @@ input[type=file]::file-selector-button:hover {
         height: 100%;
         top: 0;
         color: white;
+        user-select: none;
     }
 
     .addItemOuter {
