--- a/Front/src/Components/Card/Card.module.css
+++ b/Front/src/Components/Card/Card.module.css
@@ -6,6 +6,7 @@
         justify-content: space-around;
         width: 100%;
         height: 100%;
+        user-select: none;
     }
 
     .imageContainer {
