--- a/Front/src/Components/SideBar/LargeSideBar.module.css
+++ b/Front/src/Components/SideBar/LargeSideBar.module.css
@@ -20,6 +20,7 @@
         border-radius: 10px;
         border: 1px solid black;
         font-size: 1.1em;
+        user-select: none;
     }
 
     .filterContainer {
@@ -38,6 +39,7 @@
         border-radius: 10px;
         border: 1px solid black;
         font-size: 1.1em;
+        user-select: none;
     }
 
     .tools {
@@ -48,6 +50,7 @@
         align-items: center;
         justify-content: space-evenly;
         row-gap: 10%;
+        user-select: none;
     }
 
     .button {
