--- a/Front/src/Components/Admin/UpdateItem/UpdateItem.module.css
+++ b/Front/src/Components/Admin/UpdateItem/UpdateItem.module.css
@@ -23,6 +23,7 @@ input[type=file]::file-selector-button {
         height: 100%;
         top: 0;
         color: white;
+        user-select: none;
     }
 
     .addItemOuter {
@@ -38,13 +39,19 @@ input[type=file]::file-selector-button {
     .addItemInner {
         background-color: rgba(192, 192, 192, 0.34);
         width: 90%;
-        max-width: 630px;
+        max-width: 680px;
         display: flex;
         flex-direction: column;
         row-gap: 1.3em;
         border: 2px solid white;
         padding: 4% 5%;
         border-radius: 10px;
+        box-sizing: border-box;
+    }
+
+    .title {
+        text-align: center;
+        margin: 0;
     }
 
     .dataSection {
@@ -59,6 +66,10 @@ input[type=file]::file-selector-button {
         height: 37px;
         border: none;
         border-radius: 10px;
+    }
+
+    .select:hover {
+        cursor: pointer;
     }
 
     .input {
@@ -108,6 +119,10 @@ input[type=file]::file-selector-button {
         font-weight: bold;
         border-radius: 10px;
     }
+
+    .button:hover {
+        cursor: pointer;
+    }
     /* .input:focus {
         border: red;
     } */
@@ -144,6 +159,11 @@ input[type=file]::file-selector-button {
         border: 2px solid white;
         padding: 4% 5%;
         border-radius: 10px;
+    }
+
+    .title {
+        text-align: center;
+        margin: 0;
     }
 
     .dataSection {
@@ -242,6 +262,12 @@ input[type=file]::file-selector-button {
         border: 2px solid white;
         padding: 4% 5%;
         border-radius: 10px;
+    }
+
+    .title {
+        text-align: center;
+        margin: 0;
+        font-size: 2.5em;
     }
 
     .dataSection {
