--- a/Front/src/Components/Admin/AdminTools/AdminTools.module.css
+++ b/Front/src/Components/Admin/AdminTools/AdminTools.module.css
@@ -1,3 +1,12 @@
+.loading {
+    height: 20%;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 50%;
+}
+
 @media (min-width: 1025px) {
     .adminToolsContainer {
         display: flex;
