--- a/Front/src/Components/SideBar/LargeSideBar.module.css
+++ b/Front/src/Components/SideBar/LargeSideBar.module.css
@@ -23,6 +23,14 @@
         user-select: none;
     }
 
+    .checkBox {
+        scale: 1.35;
+    }
+
+    .checkBox:hover {
+        cursor: pointer;
+    }
+
     .filterContainer {
         background-color: rgba(250,250,250,0.8);
         border-radius: 10px;
