--- a/Front/src/Components/Footer/Footer.module.css
+++ b/Front/src/Components/Footer/Footer.module.css
@@ -19,6 +19,10 @@
         width: 33.33%;
     }
 
+    .leftSection a:hover {
+        cursor: pointer;
+    }
+
     .middleSection{
         width: 33.33%;
         text-align: center;
