--- a/Front/src/Components/NavBar/Navbar.module.css
+++ b/Front/src/Components/NavBar/Navbar.module.css
@@ -1,7 +1,3 @@
-/* .navBarContainer {
-    background-color: #6d82cb
-} */
-
 @media (min-width: 1025px) {
     .navBarContainer {
         background-image: url('../../assets/Pista_Tenis.JPG');
@@ -44,9 +40,10 @@
     .button {
         background-color: rgb(243,125,83);
         color: white;
-        padding: 1vh;
+        padding: 1.2vh 2.5vh;
         border-radius: 10px;
         border: 1px solid white;
+        font-size: 1.2em;
     }
 
     .button:hover {
