scale para algunos componentes

--- a/Front/src/Components/Admin/AddItem/AddItem.module.css
+++ b/Front/src/Components/Admin/AddItem/AddItem.module.css
@@ -316,3 +316,9 @@ input[type=file]::file-selector-button:hover {
         border: red;
     } */
 }
+
+@media (min-height: 600px) and (max-height: 800px) {
+    .addItemInner {
+        scale: 0.93;
+    }
+}
