--- a/Front/src/Components/Admin/AdminTools/AdminTools.module.css
+++ b/Front/src/Components/Admin/AdminTools/AdminTools.module.css
@@ -317,3 +317,9 @@
         border: red;
     } */
 }
+
+@media (min-height: 600px) and (max-height: 800px) {
+    .adminToolsInner {
+        scale: 0.88;
+    }
+}
