--- a/Front/src/Components/Admin/UpdateItem/UpdateItem.module.css
+++ b/Front/src/Components/Admin/UpdateItem/UpdateItem.module.css
@@ -16,7 +16,7 @@ input[type=file]::file-selector-button {
 
 
 @media (min-width: 1025px) {
-    .addItemContainer {
+    .updateItemContainer {
         display: flex;
         position: absolute;
         width: 100%;
@@ -26,7 +26,7 @@ input[type=file]::file-selector-button {
         user-select: none;
     }
 
-    .addItemOuter {
+    .updateItemOuter {
         /* background-color: silver; */
         width: 90%;
         height: 88%;
@@ -36,7 +36,7 @@ input[type=file]::file-selector-button {
         margin: auto;
     }
     
-    .addItemInner {
+    .updateItemInner {
         background-color: rgba(192, 192, 192, 0.34);
         width: 90%;
         max-width: 680px;
@@ -130,7 +130,7 @@ input[type=file]::file-selector-button {
 
 
 @media (min-width: 769px) and (max-width: 1024px) {
-    .addItemContainer {
+    .updateItemContainer {
         display: flex;
         position: absolute;
         width: 100%;
@@ -139,7 +139,7 @@ input[type=file]::file-selector-button {
         color: white;
     }
 
-    .addItemOuter {
+    .updateItemOuter {
         /* background-color: silver; */
         width: 90%;
         height: 88%;
@@ -149,7 +149,7 @@ input[type=file]::file-selector-button {
         margin: auto;
     }
     
-    .addItemInner {
+    .updateItemInner {
         background-color: rgba(192, 192, 192, 0.34);
         width: 90%;
         max-width: 630px;
@@ -234,7 +234,7 @@ input[type=file]::file-selector-button {
 
 
 @media (max-width: 768px) {
-    .addItemContainer {
+    .updateItemContainer {
         display: flex;
         position: absolute;
         width: 100%;
@@ -243,7 +243,7 @@ input[type=file]::file-selector-button {
         color: white;
     }
 
-    .addItemOuter {
+    .updateItemOuter {
         /* background-color: silver; */
         width: 90%;
         height: 88%;
@@ -253,7 +253,7 @@ input[type=file]::file-selector-button {
         margin: auto;
     }
     
-    .addItemInner {
+    .updateItemInner {
         background-color: rgba(192, 192, 192, 0.34);
         width: 90%;
         display: flex;
@@ -334,4 +334,10 @@ input[type=file]::file-selector-button {
     /* .input:focus {
         border: red;
     } */
+}
+
+@media (min-height: 600px) and (max-height: 800px) {
+    .updateItemInner {
+        scale: 0.86;
+    }
 }
