--- a/Front/src/Components/SideBar/DropDownMenu.module.css
+++ b/Front/src/Components/SideBar/DropDownMenu.module.css
@@ -6,9 +6,9 @@
     position: absolute;
     display: flex;
     flex-direction: column;
-    /* align-items: flex-end; */
     padding: 2.5%;
     border-radius: 8px;
+    border: 1px solid white;
 }
 
 .list {
@@ -18,7 +18,7 @@
 
 .separator {
     width: 100%;
-    border: 1px solid white;
+    border: 1px solid rgb(231, 231, 231);
     margin: 5px 0;
     
 }
